# rust-web

basics/: Cargo.toml
basics/src/: common.rs  main.rs  sql.rs
basics/src/common/: service.rs
basics/src/model/: mod.rs
basics/src/router/: mod.rs
