[package]
name = "basics"
version = "2.0.0"
authors = ["1039407128lgx@gmail.com"]
edition = "2018"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4"
actix-files = "0.6.0"
actix-session = "0.5"
actix-utils = "1.0.3"

config = "0.11.0"
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
serde_yaml = "0.8.17"

async-stream = "0.3"

futures = "0.3.21"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
env_logger = "0.7"
bytes = "0.5"
log = "0.4.14"
# 处理日期和时间列
mysql = '*'
chrono = '0.4'
thiserror = "1.0.0"
anyhow = "1.0.56"
bson = "1.2"
mongodb = "1.2"

once_cell = "1.7"

autowired = "0.1.8"
inventory = "0.1"
async-trait = "0.1.50"
lazy_static = "1.4.0"
